--- a/app/views/news/show.haml
+++ b/app/views/news/show.haml
@@ -62,7 +62,7 @@
       .col-4.visible-tablet
         .clearfix.hero-social-links
           %a.icon-twitter
-          %a.icon-facebook
+          %a.icon-facebook{href: "https://www.facebook.com/sharer/sharer.php?u=#{request.url}", target: "_blank"}
 
 .row.news-post  
   .col-12
