--- a/app/views/news/show.haml
+++ b/app/views/news/show.haml
@@ -36,8 +36,8 @@
       "description": "#{@news_post.summary}"
     }
 - content_for :meta_image, @news_post.image(:feature)
-- content_for :meta_image_height, "630px"
-- content_for :meta_image_width, "1200px"
+- content_for :meta_image_height, "630"
+- content_for :meta_image_width, "1200"
   
 = content_for :hero do
   .hero-feature-post
