--- a/app/assets/stylesheets/custom_news_styles/how_much_is_my_saddle_worth.scss
+++ b/app/assets/stylesheets/custom_news_styles/how_much_is_my_saddle_worth.scss
@@ -1,4 +1,4 @@
-//= require angucomplete
+//= require angular-material
 @import "mixins/all";
 
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
