--- a/app/assets/stylesheets/custom_news_styles/how_much_is_my_saddle_worth.scss
+++ b/app/assets/stylesheets/custom_news_styles/how_much_is_my_saddle_worth.scss
@@ -12,6 +12,10 @@
   overflow:hidden; /* So the sliding bit doesn't stick out. */
   margin:0 auto;
 }
+
+md-tabs-wrapper {
+  display: none;
+}
 button:disabled {
     background: #ddd;
 }
